# larreco

./: CMakeLists.txt  CMakePresets.json  README.md
ClusterFinder/: .ClusterCrawlerShower_module.cc.un~  .cluster_microboone.fcl.un~  .clustermodules.fcl.un~  BlurredClustering_module.cc  CCClusterFinder_module.cc  CMakeLists.txt  Cluster3D_module.cc  ClusterAna_module.cc  ClusterCheater_module.cc  ClusterCrawlerShower_module.cc  ClusterCrawlerShower_module.cc~  ClusterCrawler_module.cc  ClusterCreator.cxx  ClusterCreator.h  ClusterPCA_module.cc  ClusteringValidation_module.cc  DBclusterAna_module.cc  DBcluster_module.cc  DumpClusters_module.cc  FLAMELSWMSCluster_module.cc  FuzzyClusterMerger_module.cc  GNUmakefile  HoughLineFinderAna_module.cc  HoughLineFinder_module.cc  KingaClusterAna_module.cc  KingaCluster_module.cc  LineCluster_module.cc  LineMerger_module.cc  ShowerAngleClusterAna_module.cc  ShowerAngleClusterAna_module.cc.sample  ShowerAngleCluster_module.cc  ShowerAngleCluster_module.cc.sample  SimpleClusterMerger_module.cc  SmallClusterFinder_module.cc  TrajCluster_module.cc  cluster_argoneut.fcl  cluster_bo.fcl  cluster_dune.fcl  cluster_jp250L.fcl  cluster_lbne.fcl  (+4 more)
ClusterFinder/RStarTree/: RStarBoundingBox.h  RStarTree.h  RStarVisitor.h
ClusterFinder/TrackShowerSplitter/: CMakeLists.txt  TrackShowerHits_module.cc  trackshowerhits.fcl
DirOfGamma/: CMakeLists.txt  DirOfGamma.cxx  DirOfGamma.h  EMShower3D_module.cc  MergeEMShower3D_module.cc  MultiEMShowers_module.cc  emshower3d.fcl
DirOfGamma/DirOfGamma/: CMakeLists.txt
MCComp/: CMakeLists.txt  MCBTAlg.cxx  MCBTAlg.h  MCBTDemo_module.cc  MCMatchAlg.cxx  MCShowerMatchAlg.cxx  MCShowerMatchAlg.h
MCComp/job/: demo.fcl
ShowerFinder/ShowerReco3D/: .depend  CMakeLists.txt  ShowerQuality_module.cc  ShowerReco3D_module.cc  ShowerRecoAlg.cxx  ShowerRecoAlg.h  ShowerRecoAlgBase.cxx  ShowerRecoAlgBase.h  ShowerRecoManager.cxx  ShowerRecoManager.h
larreco/: CMakeLists.txt
larreco/Calibrator/: CMakeLists.txt  IPhotonCalibrator.h  IPhotonCalibratorService.h  PhotonCalibrator.fcl  PhotonCalibratorServiceStandard.h  PhotonCalibratorServiceStandard_service.cc  PhotonCalibratorStandard.h
larreco/Calorimetry/: BezierCalorimetry_module.cc  CMakeLists.txt  CaloChecker_module.cc  CalorimetryAlg.cxx  CalorimetryAlg.h  Calorimetry_module.cc  GeneralCalorimetry_module.cc  GnocchiCalorimetry_module.cc  INormalizeCharge.h  LinearEnergyAlg.cxx  LinearEnergyAlg.h  PrintCalorimetry_module.cc  ShowerCalorimetry.fcl  ShowerCalorimetry_module.cc  TrackCalorimetryAlg.cxx  TrackCalorimetryAlg.h  TrackCalorimetry_module.cc  calo.fcl  calorimetry.fcl  calorimetry_bo.fcl  calorimetry_dune35t.fcl  calorimetry_microboone.fcl  run_checkcalo.fcl  run_checkcalo_icarus.fcl  shower_calorimetry_job.fcl
larreco/ClusterFinder/: BlurredClustering_module.cc  CMakeLists.txt  Cluster3D_module.cc  ClusterAnaV2_module.cc  ClusterAna_module.cc  ClusterCheater_module.cc  ClusterCrawler_module.cc  ClusterCreator.cxx  ClusterCreator.h  ClusterPCA_module.cc  ClusterTrackAna_module.cc  ClusteringValidation_module.cc  DBCluster3D_module.cc  DBCluster3D_uboone.fcl  DBclusterAna_module.cc  DBcluster_module.cc  DumpClusters_module.cc  EndPointModule_module.cc  FuzzyClusterMerger_module.cc  HoughLineFinderAna_module.cc  HoughLineFinder_module.cc  LineCluster_module.cc  LineMerger_module.cc  SimpleClusterMerger_module.cc  SimpleLineCluster_module.cc  SmallClusterFinder_module.cc  TrajCluster_module.cc  cluster_argoneut.fcl  cluster_bo.fcl  cluster_dune.fcl  cluster_microboone.fcl  clustermodules.fcl  dump_clusters.fcl  fuzzyCluster_module.cc
larreco/Deprecated/: BezierCurveHelper.cxx  BezierCurveHelper.h  BezierTrack.cxx  BezierTrack.h  CMakeLists.txt
larreco/DirOfGamma/: CMakeLists.txt  DirOfGamma.cxx  DirOfGamma.h  EMShower3D_module.cc  MergeEMShower3D_module.cc  MultiEMShowers_module.cc
larreco/EventFinder/: AggregateEvent_module.cc  CMakeLists.txt  EventCheater_module.cc  EventMaker_module.cc  eventfindermodules_dune.fcl
larreco/Genfit/: CMakeLists.txt  GFAbsBField.h  GFAbsEnergyLoss.cxx  GFAbsEnergyLoss.h  GFAbsFinitePlane.cxx  GFAbsFinitePlane.h  GFAbsGeoMatManager.cxx  GFAbsGeoMatManager.h  GFAbsRecoHit.cxx  GFAbsRecoHit.h  GFAbsTrackRep.cxx  GFAbsTrackRep.h  GFBookkeeping.cxx  GFBookkeeping.h  GFConstField.cxx  GFConstField.h  GFDaf.cxx  GFDaf.h  GFDetPlane.cxx  GFDetPlane.h  GFEnergyLossBetheBloch.cxx  GFEnergyLossBetheBloch.h  GFEnergyLossBrems.cxx  GFEnergyLossBrems.h  GFEnergyLossCoulomb.cxx  GFEnergyLossCoulomb.h  GFException.cxx  GFException.h  GFFieldManager.cxx  GFFieldManager.h  GFGeoMatManager.cxx  GFGeoMatManager.h  GFKalman.cxx  GFKalman.h  GFMaterialEffects.cxx  GFMaterialEffects.h  GFPlanarHitPolicy.cxx  GFPlanarHitPolicy.h  GFRecoHitFactory.cxx  GFRecoHitFactory.h  (+25 more)
larreco/HitFinder/: APAHitFinder_module.cc  CMakeLists.txt  DPRawHitFinder_module.cc  DisambigCheater_module.cc  DumpHits_module.cc  FFTHitFinder_module.cc  GausHitFinderAna_module.cc  GausHitFinder_module.cc  GaussianEliminationAlg.cxx  GaussianEliminationAlg.h  HitAnaAlg.cxx  HitAnaAlg.h  HitAnaModule_module.cc  HitCheater_module.cc  HitFilterAlg.cxx  HitFilterAlg.h  HitFinderAna_module.cc  HitFinder_module.cc  MCHitAnaExample_module.cc  MCHitFinder_module.cc  RFFHitFinderAlg.cxx  RFFHitFinderAlg.h  RFFHitFinder_module.cc  RFFHitFitter.cxx  RFFHitFitter.h  RawHitFinder_module.cc  RegionAboveThresholdFinder.cxx  RegionAboveThresholdFinder.h  TTHitFinder_module.cc  dump_hits.fcl  hitana.fcl  hitfindermodules.fcl  hitfindermodules_dune.fcl.example  hitfindermodules_microboone.fcl
larreco/MCComp/: CMakeLists.txt  MCBTAlg.cxx  MCBTAlg.h  MCBTAlgConstants.h  MCBTDemo_module.cc  MCBTException.cxx  MCBTException.h  MCMatchAlg.cxx  MCMatchAlg.h
larreco/QuadVtx/: CMakeLists.txt  EvalVtx.fcl  EvalVtx_module.cc  HeatMap.cxx  HeatMap.h  QuadVtx.fcl  QuadVtx_module.cc  quadvtxjob.fcl
larreco/Reco3D/: CMakeLists.txt  PlotSpacePoints.fcl  PlotSpacePoints_module.cc  Reco3D.fcl  Reco3D_module.cc  Solver.cxx  Solver.h  reco3djob.fcl  reco3djob_uboone.fcl
larreco/RecoAlg/: DBScan3DAlg.h  (+111 more)
(+1097 files in other folders)
