include_directories(${CMAKE_CURRENT_SOURCE_DIR})

simple_plugin(EMShower3D "module"
			RawData
			RecoAlg
			PMAlg
			DirOfGamma
			BackTracker_service
      RecoBase
			Simulation
			Geometry
	    Geometry_service
      Utilities    
			DetectorProperties_service
			LArProperties_service  
			  ${SIMULATIONBASE}
        ${ART_FRAMEWORK_CORE}
			  ${ART_FRAMEWORK_PRINCIPAL}
			  ${ART_FRAMEWORK_SERVICES_REGISTRY}
				${ART_FRAMEWORK_SERVICES_BASIC}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
			  ${ART_PERSISTENCY_COMMON}
			  ${ART_PERSISTENCY_PROVENANCE}
			  ${ART_UTILITIES}
			  ${MF_MESSAGELOGGER}
			  ${MF_UTILITIES}
	      ${FHICLCPP}
			  ${CETLIB}
        ${ROOT_GEOM}
        ${ROOT_XMLIO}
        ${ROOT_GDML}
			  ${ROOT_BASIC_LIB_LIST}
              BASENAME_ONLY
)

simple_plugin(MergeEMShower3D "module"
			RawData
			RecoAlg
			PMAlg
			DirOfGamma
			BackTracker_service
      RecoBase
			Simulation
			Geometry
	    Geometry_service
      Utilities    
			DetectorProperties_service
			LArProperties_service  
			  ${SIMULATIONBASE}
        ${ART_FRAMEWORK_CORE}
			  ${ART_FRAMEWORK_PRINCIPAL}
			  ${ART_FRAMEWORK_SERVICES_REGISTRY}
				${ART_FRAMEWORK_SERVICES_BASIC}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
			  ${ART_PERSISTENCY_COMMON}
			  ${ART_PERSISTENCY_PROVENANCE}
			  ${ART_UTILITIES}
			  ${MF_MESSAGELOGGER}
			  ${MF_UTILITIES}
	      ${FHICLCPP}
			  ${CETLIB}
        ${ROOT_GEOM}
        ${ROOT_XMLIO}
        ${ROOT_GDML}
			  ${ROOT_BASIC_LIB_LIST}
              BASENAME_ONLY
)

simple_plugin(MultiEMShowers "module"
			RawData
			RecoAlg
			PMAlg
			DirOfGamma
			BackTracker_service
      RecoBase
			Simulation
			Geometry
	    Geometry_service
      Utilities    
			DetectorProperties_service
			LArProperties_service  
			  ${SIMULATIONBASE}
        ${ART_FRAMEWORK_CORE}
			  ${ART_FRAMEWORK_PRINCIPAL}
			  ${ART_FRAMEWORK_SERVICES_REGISTRY}
				${ART_FRAMEWORK_SERVICES_BASIC}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL}
			  ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
			  ${ART_PERSISTENCY_COMMON}
			  ${ART_PERSISTENCY_PROVENANCE}
			  ${ART_UTILITIES}
			  ${MF_MESSAGELOGGER}
			  ${MF_UTILITIES}
	      ${FHICLCPP}
			  ${CETLIB}
        ${ROOT_GEOM}
        ${ROOT_XMLIO}
        ${ROOT_GDML}
			  ${ROOT_BASIC_LIB_LIST}
              BASENAME_ONLY
)


add_subdirectory(DirOfGamma)

install_headers()
install_fhicl()
install_source()
