
add_subdirectory(WireCell)
add_subdirectory(VertexFinder)
add_subdirectory(TrackFinder)
add_subdirectory(SpacePointFinder)
add_subdirectory(ShowerFinder)
add_subdirectory(RecoAlg)
add_subdirectory(MCComp)
add_subdirectory(HitFinder)
add_subdirectory(Genfit)
add_subdirectory(EventFinder)
add_subdirectory(DirOfGamma)
add_subdirectory(ClusterFinder)

