add_subdirectory(Calorimetry)
add_subdirectory(Calibrator)
add_subdirectory(ClusterFinder)
add_subdirectory(EventFinder)
add_subdirectory(Genfit)
add_subdirectory(HitFinder)
add_subdirectory(RecoAlg)
add_subdirectory(ShowerFinder)
add_subdirectory(TrackFinder)
add_subdirectory(VertexFinder)
add_subdirectory(SpacePointFinder)
add_subdirectory(SpacePointSolver)
add_subdirectory(QuadVtx)
add_subdirectory(MCComp)
add_subdirectory(WireCell)
add_subdirectory(DirOfGamma)
add_subdirectory(SCECorrections)
